Fixed z-index for best stacking

--- a/src/assets/styles/main.css.less
+++ b/src/assets/styles/main.css.less
@@ -36,16 +36,16 @@ body {
 }
 
 .is-sticky {
-  // z-index: 1;
+  z-index: 1;
   background: silver;
 
   &.stuck {
     background: pink;
-    // z-index: 1;
+    z-index: 2;
 
     &.bottom {
       background: purple;
-      // z-index: 1;
+      z-index: 0;
     }
   }
 }
